tests/snapshots/assets__check_file@unit-markup-func-in-text.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/func-in-text.typ
---
如果你不能很好地阅读和理解#link(
  "https://semver.org/",
)[SemVer]规范，仅记住合法的版本号#link(
  "https://semver.org/",
)由三个递增的数字#link(
  "https://semver.org/",
)组成，并用「点号」（`.`）分隔；版本号之间#link(
  "https://semver.org/",
)可以相互比较，且比较版本#link(
  "https://semver.org/",
)时按顺序比较数字。例如`0.0.0`、`0.10.0`、`1.5.11`、`1.24.1`是合法且递增的版本号。

如果你不能很好地阅读和理解
#link("https://semver.org/")[SemVer]
规范，仅记住合法的版本号#link(
  "https://semver.org/",
)由三个递增的数字组成，并用「点号」（`.`）分隔；版本号之间可以相互比较，且比较版本时按顺序比较数字。例如`0.0.0`、`0.10.0`、`1.5.11`、`1.24.1`是合法且递增的版本号。

Lorem ipsum dolor sit amet,
`consectetur` adipiscing elit. Nulla nec
purus feugiat, molestie ipsum et,
consequat nibh.
