tests/snapshots/assets__check_file@unit-markup-heading.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/markup/heading.typ
snapshot_kind: text
---
== Level 2

== Level 2 with // comments
