tests/snapshots/assets__check_file@unit-markup-heading.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/heading.typ
---
== Level 2

== Level 2 with // comments
