tests/snapshots/assets__check_file@unit-markup-indent-raw.typ-120.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/markup/indent-raw.typ
snapshot_kind: text
---
`123`
```typ
`code`
```
