tests/snapshots/assets__check_file@unit-markup-indent-raw.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/indent-raw.typ
---
`123`
```typ
`code`
```
