tests/snapshots/assets__check_file@unit-markup-inline-block-raw.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/inline-block-raw.typ
---
#text(``` test ```)
#text(```test ```)
