tests/snapshots/assets__check_file@unit-markup-list-multiline.typ-40.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/list-multiline.typ
snapshot_kind: text
---
- Lorem ipsum dolor sit amet,
  consectetur adipiscing elit,
- sed do eiusmod tempor incididunt
  ut labore et dolore magna aliqua.
