tests/snapshots/assets__check_file@unit-markup-list.typ-80.snap
---
source: tests/assets.rs
expression: doc_string
input_file: tests/assets/unit/markup/list.typ
---
=== Legends <plot-legends>
A legend for a plot will be drawn if at least one set of data with a label that is not `none` is given.
The following anchors are available when placing a legend on a plot:
- `legend.north`
- `legend.south`
- `legend.east`
- `legend.west`
