tests/snapshots/assets__check_file@unit-markup-multi-tick-raw.typ-40.snap
---
source: tests/src/unit.rs
input_file: tests/fixtures/unit/markup/multi-tick-raw.typ
snapshot_kind: text
---
`single tick`

``double backtick. Actually this is not raw text.``

```js
function fib(n) {
  if (n <= 1) return 1;
  return fib(n - 1) + fib(n - 2);
}
```

````md
# This is a markdown code block
```cpp
#include <iostream>
int main() {
  std::cout << "Hello, World!" << std::endl;
  return 0;
}
```
````
